Kinézet hangolása az összes ablakban

--- a/Szakdolgozat/src/szakdolgozat/workers.form
+++ b/Szakdolgozat/src/szakdolgozat/workers.form
@@ -30,7 +30,7 @@
                   <Group type="102" attributes="0">
                       <Component id="jScrollPane1" min="-2" pref="389" max="-2" attributes="0"/>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" attributes="0">
+                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
                           <Group type="102" attributes="0">
                               <Group type="103" groupAlignment="0" max="-2" attributes="0">
                                   <Group type="102" alignment="0" attributes="0">
@@ -47,8 +47,13 @@
                                               <EmptySpace pref="67" max="32767" attributes="0"/>
                                               <Component id="front" min="-2" max="-2" attributes="0"/>
                                           </Group>
-                                          <Component id="hire" alignment="0" min="-2" pref="73" max="-2" attributes="0"/>
-                                          <Component id="fire" alignment="0" min="-2" max="-2" attributes="0"/>
+                                          <Group type="102" attributes="0">
+                                              <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                                  <Component id="hire" max="32767" attributes="0"/>
+                                                  <Component id="fire" pref="82" max="32767" attributes="0"/>
+                                              </Group>
+                                              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                                          </Group>
                                       </Group>
                                       <EmptySpace max="-2" attributes="0"/>
                                   </Group>
@@ -78,7 +83,7 @@
                                   </Group>
                               </Group>
                           </Group>
-                          <Component id="info" min="-2" pref="401" max="-2" attributes="0"/>
+                          <Component id="info" max="32767" attributes="0"/>
                       </Group>
                   </Group>
                   <Component id="title" min="-2" max="-2" attributes="0"/>
